--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "sass": "^1.32.12",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
+        "vue-router": "^3.5.1",
         "vuetify": "^2.4.11"
     }
 }
